Fixed overflow issues so that the chat panel now scrolls properly by adding min-height: 0 and min-width: 0 to the css reset.

--- a/frontend/src/reset.css
+++ b/frontend/src/reset.css
@@ -22,6 +22,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+ 	min-width: 0px;
+	min-height: 0px;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
